--- a/articles/virtual-machines/windows/toc.yml
+++ b/articles/virtual-machines/windows/toc.yml
@@ -140,6 +140,14 @@
       href: csharp-template.md
     - name: Skapa en virtuell dator med Chef
       href: chef-automation.md
+    - name: Skapa en virtuell dator med Python
+      href: python.md
+    - name: Skapa en virtuell dator med Terraform
+      items:
+      - name: Installera och konfigurera
+        href: ../terraform-install-configure.md
+      - name: Skapa en grundläggande infrastruktur
+        href: ../terraform-create-complete-vm.md      
     - name: Skapa en virtuell dator som kör populära programramverk
       href: app-frameworks.md
     - name: Flytta en virtuell dator mellan prenumerationer
@@ -185,13 +193,10 @@
       href: capture-image-resource.md
     - name: Skapa en virtuell dator från en generaliserad avbildning av en hanterad disk
       href: create-vm-generalized-managed.md
+    - name: Skapa en avbildning med Packer
+      href: build-image-with-packer.md
   - name: Hantera VM-lagring
     items:
-    - name: Azure Managed Disks
-      href: ../../storage/storage-managed-disks-overview.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
-      items:
-      - name: Vanliga frågor och svar
-        href: ../../storage/storage-faq-for-disks.md?toc=%2fazure%2fvirtual-machines%2fwindows%2ftoc.json
     - name: Skapa Managed Disk
       href: create-managed-disk-ps.md
     - name: Migrera virtuella datorer till Managed Disks
@@ -215,6 +220,8 @@
       href: expand-os-disk.md
     - name: Expandera datadisk
       href: expand-data-disks.md
+    - name: Använda en filresurs
+      href: mount-azure-file-storage.md
     - name: Använd D som en datadisk
       href: change-drive-letter.md
   - name: VM-nätverk
@@ -348,6 +355,8 @@
         href: migration-classic-resource-manager-faq.md
   - name: Felsöka
     items:
+    - name: Förstå en omstart av systemet
+      href: understand-vm-reboot.md
     - name: Anslutningar till fjärrskrivbord
       href: troubleshoot-rdp-connection.md
       items:
