--- a/articles/app-service-web/toc.yml
+++ b/articles/app-service-web/toc.yml
@@ -37,7 +37,7 @@
     href: app-service-web-tutorial-custom-domain.md
   - name: 3 – Bind SSL-certifikat
     href: app-service-web-tutorial-custom-ssl.md
-  - name: 4. – Lägg till Content Delivery Network
+  - name: 4 – Lägg till CDN
     href: app-service-web-tutorial-content-delivery-network.md
 #  - name: 5 - Monitor your app
 #    href: app-service-web-tutorial-monitoring.md
@@ -278,8 +278,6 @@
         href: app-service-web-open-source-technologies-faq.md
       - name: Vanliga frågor och svar om konfiguration och hantering
         href: app-service-web-configuration-and-management-faq.md
-      - name: Fler vanliga frågor och svar
-        href: app-service-web-others-faq.md
   - name: Prissättning
     href: https://azure.microsoft.com/pricing/details/app-service/
   - name: Kvotinformation
