--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -11,6 +11,12 @@
     href: quickstart-create-mysql-server-database-using-azure-portal.md
   - name: Skapa DB – Azure CLI
     href: quickstart-create-mysql-server-database-using-azure-cli.md
+  - name: Ansluta och fråga
+    items:
+    - name: PHP
+      href: connect-php.md
+    - name: Java
+      href: connect-java.md
 - name: Självstudier
   items:
   - name: 1 – Utforma en databas
@@ -85,8 +91,12 @@
       href: howto-connection-string.md
     - name: Konfigurera SSL
       href: howto-configure-ssl.md
-    - name: Webbapp
+    - name: Webbappar
       href: howto-connect-webapp.md
+  - name: Konfigurera serverparametrar
+    items:
+    - name: Azure Portal
+      href: howto-server-parameters.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -99,6 +109,8 @@
     href: https://social.msdn.microsoft.com/forums/security/en-US/home?forum=AzureDatabaseforMySQL
   - name: Stack Overflow
     href: http://stackoverflow.com/questions/tagged/azure-database-mysql
+  - name: Videoklipp
+    href: videos.md
   - name: Begär en funktion
     href: https://feedback.azure.com/forums/597982-azure-database-for-mysql
   - name: Regional tillgänglighet
