--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -11,12 +11,14 @@
     href: quickstart-create-server-database-portal.md
   - name: Skapa DB – Azure CLI
     href: quickstart-create-server-database-azure-cli.md
-  - name: Anslut
-    items:
-    - name: Node.js
-      href: connect-nodejs.md
+  - name: Ansluta och fråga
+    items: 
     - name: Python
       href: connect-python.md
+    - name: Node.js
+      href: connect-nodejs.md
+    - name: .NET
+      href: connect-csharp.md
 - name: Självstudier
   items:
   - name: 1 – Utforma en databas
@@ -27,6 +29,10 @@
       href: tutorial-design-database-using-azure-cli.md
   - name: '2 – Utforma webbapp: Python'
     href: ../app-service-web/app-service-web-tutorial-docker-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
+- name: Exempel
+  items:
+  - name: Azure CLI
+    href: sample-scripts-azure-cli.md
 - name: Koncept
   items:
   - name: Databas och servrar
@@ -57,10 +63,6 @@
     items:
     - name: Anslutningsbibliotek
       href: concepts-connection-libraries.md
-- name: Exempel
-  items:
-  - name: Azure CLI
-    href: sample-scripts-azure-cli.md
 - name: Instruktionsguider
   items:
   - name: Brandväggsregler
@@ -73,6 +75,8 @@
     items:
     - name: Azure Portal
       href: howto-restore-server-portal.md
+    - name: Azure CLI
+      href: howto-restore-server-cli.md
   - name: Migrera databasen
     items:
     - name: Dumpa och återställa
@@ -99,6 +103,8 @@
     href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=AzureDatabaseforPostgreSQL
   - name: Stack Overflow
     href: http://stackoverflow.com/questions/tagged/azure-database-postgresql
+  - name: Videoklipp
+    href: videos.md    
   - name: Feedback-forum
     href: https://feedback.azure.com/forums/597976-azure-database-for-postgresql
   - name: Regional tillgänglighet
