--- a/articles/mysql/index.yml
+++ b/articles/mysql/index.yml
@@ -20,7 +20,7 @@ sections:
 - title: Snabbstarter på 5 minuter
   items:
   - type: paragraph
-    text: 'Learn how to create a MySQL database on Azure using:'
+    text: 'Lär dig hur du skapar en MySQL-databas på Azure med hjälp av:'
   - type: list
     style: icon48
     items: 
@@ -35,12 +35,12 @@ sections:
 - title: Steg för steg-självstudier
   items:
   - type: paragraph
-    text: 'Learn how to design your database and develop apps:'
+    text: 'Lär dig hur du utformar din databas och utvecklar appar:'
   - type: list
     style: ordered
     items:
-    - html: Design a Database&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>
-    - html: Create a Web App&#58; <a href="../app-service-web/app-service-web-create-web-app-from-marketplace.md?toc=%2fazure%2fmysql%2ftoc.json">Wordpress - Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP - Azure CLI</a>
+    - html: 'Utforma en databas&#58; <a href="/azure/mysql/tutorial-design-database-using-portal">Azure Portal</a> | <a href="/azure/mysql/tutorial-design-database-using-cli">Azure CLI</a>'
+    - html: 'Skapa en webbapp &#58; <a href="../app-service-web/app-service-web-create-web-app-from-marketplace.md?toc=%2fazure%2fmysql%2ftoc.json">Wordpress – Portal</a> | <a href="../app-service-web/app-service-web-tutorial-php-mysql.md?toc=%2fazure%2fmysql%2ftoc.json">PHP – Azure CLI</a>'
 - title: Referens
   items:
   - type: list
