--- a/articles/cognitive-services/Content-Moderator/toc.yml
+++ b/articles/cognitive-services/Content-Moderator/toc.yml
@@ -1,56 +1,58 @@
-- name: Content Moderator-dokumentation
+- name: Content Moderator Documentation
   href: ../index.md
-- name: Översikt
+- name: Overview
   items: 
-  - name: 'Läs mer om Content Moderator-API:t'
+  - name: Learn about the Content Moderator API
     href: overview.md
-- name: Kom igång
+- name: Get started
   items: 
-  - name: Kom igång med Content Moderator
+  - name: Get started with Content Moderator
     href: quick-start.md
-- name: Gör så här för att
+- name: How to
   items: 
-  - name: Användarhandbok för granskningsverktyg
+  - name: Review tool user guide
     items:
     - name: Human in the loop
       href: Review-Tool-User-Guide/human-in-the-loop.md
-    - name: Skapa team
+    - name: Create team
       href: Review-Tool-User-Guide/Sign-up.md
-    - name: Ladda upp bilder
+    - name: Upload images
       href: Review-Tool-User-Guide/Upload-Images.md
-    - name: Bildomdömen
+    - name: Image reviews
       href: Review-Tool-User-Guide/Review-Moderated-Images.md
-    - name: Textomdömen
+    - name: Text reviews
       href: Review-Tool-User-Guide/Text-Reviews.md
-    - name: Team och undergrupper
+    - name: Team and subteams
       href: Review-Tool-User-Guide/SubTeams.md
-    - name: Använda arbetsflöden
+    - name: Using workflows
       href: Review-Tool-User-Guide/Workflows.md
-    - name: Inställningar
+    - name: Settings
       href: Review-Tool-User-Guide/Configure.md
-    - name: Visa instrumentpanel
+    - name: View dashboard
       href: Review-Tool-User-Guide/View-Dashboard.md
-- name: Referens
+- name: Reference
   items: 
-  - name: API-referensguide
+  - name: API Reference Guide
   
     href: api-reference.md
     items:
-  - name: 'Omdömes-API:er'
+  - name: Review APIs
     href: review-api.md
-  - name: Bildmoderering
+  - name: Image moderation
     href: image-moderation-api.md
-  - name: Textmoderering
+  - name: Text moderation
     href: text-moderation-api.md
-  - name: Textmoderering – språk
+  - name: Text moderation - languages
     href: Text-Moderation-API-Languages.md
-  - name: Videomoderering
+  - name: Video moderation
     href: video-moderation-api.md
-- name: Resurser
+- name: Resources
   items:  
+  - name: Azure Roadmap
+    href: https://azure.microsoft.com/roadmap/
   - name: Windows SDK
     href: https://github.com/MicrosoftContentModerator/Microsoft.CognitiveServices.ContentModerator-Windows/
-  - name: Exempel
+  - name: Samples
     href: https://azure.microsoft.com/resources/samples/?service=cognitive-services
-  - name: VANLIGA FRÅGOR OCH SVAR
+  - name: FAQ
     href: FAQs.md
